# xdt

./: .clang-format  .gitignore  CMakeLists.txt  License
.github/workflows/: cmake.yml
cmake/: xdtConfig.cmake.in
inc/: avx.hh  cpuid.hh  sse.hh  vendor.hh  xdt.hh
inc/xdt/: avx.hh  intel.hh  sse.hh  vendor.hh
src/: avx.cc  cpuid.cc  def.hh  intel.cc  sse.cc  vendor.cc
